--- a/swegsIN_frontend/index.html
+++ b/swegsIN_frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/cart-icon.svg" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ShoppyGlobe</title>
+    <title>Swegs.IN</title>
   </head>
   <body>
     <div id="root"></div>
